# RustHTTPServer

./: Cargo.toml  justfile
http/: Cargo.toml
http/src/: lib.rs  request.rs  response.rs  route.rs
src/: deserialize.rs  main.rs  parser.rs  request.rs  response.rs  route.rs  sample_routes.rs
src/http/: mod.rs  request.rs  response.rs  route.rs
