[workspace]
members = ["http"]

[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = { path = "http" }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
clap = { version = "4.3.19", features = ["derive"] }
